Fixed project title to align to center on smaller screens, and added some better comments

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -1,11 +1,7 @@
 section#projects {
-  // old styles
-  // article#project{
-  // border: 2px solid var(--secondary_bg1_color);
-  // border-radius: 10px;
-  // box-shadow: 2px 7px 7px var(--secondary_bg1_color), 2px 10px 7px grey;
-  // transition: all 0.3s ease;
-  // }
+  #projects-heading {
+    margin-bottom: 10px;
+  }
 
   // glassified project section
   article#project {
@@ -27,16 +23,6 @@ section#projects {
 
     border-radius: 15px;
     backdrop-filter: blur(5px);
-
-    // the rotation takes extra space and makes the page re-render on every frame when the transform changes, so removing this
-    // this is much slow on low end devices
-
-    // transition: all 1s ease;
-    // transform: rotateZ(-1.26deg);
-
-    // &:hover, &:focus{
-    //     transform: scale(1.03, 1.03);
-    // }
   }
 
   .project-number {
@@ -44,7 +30,7 @@ section#projects {
     position: absolute;
     top: -15px;
     right: -10px;
-    pointer-events: none; // so that it cannot be selected/copied
+    pointer-events: none; // pointer-events are none, that the project number cannot be selected/copied
     color: var(--project_number_color);
   }
 
@@ -75,7 +61,8 @@ section#projects {
   }
 
   #project-links a {
-    // css variables are used here as css variables are reference oriented, so if I change it for smaller screens, it would affect the usage also
+    // css variables are used here as css variables are reference oriented,
+    // so if I change this css variable further, it would also change the style in which this variable was used
     --project-link-border-radius: 30px;
 
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -175,11 +162,15 @@ section#projects {
       align-items: center;
     }
 
+    #project-title {
+      // centering the project title, when we layout the projects in columnar manner
+      text-align: center;
+    }
+
     #project-img-wrapper img {
       /*
       as the main project section is vertically aligned, 
-      so we can decrease its width and height percentage,
-      to not make it seem extra large while viewing it
+      so we should decrease its width and height percentage to not make the project image seem extra large
       */
       width: 90%;
       height: 80%;
@@ -198,7 +189,12 @@ section#projects {
     }
 
     #project-img-wrapper img {
-      // on smaller screens, we can again make it larger
+      /*
+      as the main project section is vertically aligned 
+      but the screen is now smaller at max width of 700px, 
+      so we can make the image width and height to 100% again, 
+      so that it looks better on smaller screens (at max-width: 700px)
+      */
       width: 100%;
       height: 100%;
     }
@@ -208,8 +204,9 @@ section#projects {
 @media (max-width: 450px) {
   section#projects {
     #project-description {
-      // so that we don't rely on characters count
-      // rather we have the width of 95% of the total width allowed for this project description..
+      // for not overflowing characters in the project description,
+      // width is set to 95% of total width allowed for this project description
+      // and this lets us not rely on characters count
       width: 95%;
     }
   }
